--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1361,6 +1361,78 @@ body {
     color: #000000;
   }
 }
+.reviews-slider-wrapper {
+  position: relative;
+}
+
+.swiper {
+  max-width: 1156px;
+  height: 431px;
+  margin: 0 42px 0 42px;
+  margin-bottom: 120px;
+  position: relative;
+}
+.swiper::before {
+  content: "";
+  position: absolute;
+  width: 277px;
+  height: 431px;
+  left: 0px;
+  top: 0px;
+  background: linear-gradient(90deg, #F4F2F0 0.36%, rgba(244, 242, 240, 0.8) 45.38%, rgba(244, 242, 240, 0) 99.28%);
+  z-index: 1;
+  pointer-events: none;
+}
+.swiper::after {
+  content: "";
+  position: absolute;
+  width: 25%;
+  height: 431px;
+  right: 0;
+  top: 0px;
+  background: linear-gradient(90deg, rgba(242, 240, 237, 0) 0.36%, rgba(242, 240, 237, 0.8) 66.82%, #F2F0ED 99.28%);
+  z-index: 1;
+  pointer-events: none;
+}
+
+.swiper-slide {
+  width: 25%;
+  border-radius: 20px;
+  overflow: hidden;
+  cursor: pointer;
+  position: relative;
+}
+.swiper-slide img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 40px;
+  border: solid #131313 1px;
+  border-radius: 100px;
+  cursor: pointer;
+}
+
+.swiper-button-prev {
+  left: -20px;
+}
+
+.swiper-button-next {
+  right: -20px;
+  transform: rotate(180deg);
+}
+
 .page-404 {
   position: relative;
   width: 100%;
