--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -150,5 +150,5 @@ body {
 @import "footer";
 @import "404";
 @import "fonts/icons";
-@import "swiper"
-// @import "popup";
+@import "swiper";
+@import "popup";
