--- a/resources/scss/footer.scss
+++ b/resources/scss/footer.scss
@@ -1,6 +1,173 @@
 //====================================================================================================
 .footer {
+  background: #F0EDEA;
+  padding-bottom: 120px;
 
+  &__decor-line {
+    width: 100%;
+    height: 1px;
+    background: #131313;
+    opacity: 0.1;
+  }
+
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    gap: 15px;
+
+  }
+
+  &__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 134px;
+    height: 80px
+  }
+
+  &__popup {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 28px;
+    text-align: center;
+
+    & span {
+      text-decoration-line: underline;
+    }
+  }
+
+  &__icons {
+    font-size: 24px;
+    color: #131313;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+  }
+
+  &__icon {}
+
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-top: 120px;
+    gap: 15px;
+  }
+
+  &__box {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+
+  &__menu-title {
+    font-family: $font__CormorantGaramond;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 36px;
+    text-transform: uppercase;
+    margin-bottom: 24px;
+  }
+
+  &__menu-list {}
+
+  &__menu-item:not(:last-child) {
+    margin-bottom: 16px;
+  }
+
+  &__menu-link {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  &__contacts-item {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 12px;
+  }
+
+  &__contacts-icon {
+    font-size: 24px;
+    color: #131313;
+  }
+
+  &__contacts-address,
+  &__contacts-phone {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 23px;
+  }
 }
 
 //====================================================================================================
+
+@media(max-width: 951px) {
+  .footer {
+    padding-bottom: 80px;
+
+    &__top {
+      flex-direction: column;
+      gap: 24px;
+    }
+
+    &__logo {}
+
+    &__popup {
+      font-size: 16px;
+      line-height: 20px;
+    }
+
+    &__icons {}
+
+    &__icon {
+      font-size: 16px;
+    }
+
+    &__content {
+      flex-direction: column;
+      margin-top: 80px;
+      width: 100%;
+      max-width: 441px;
+      margin-left: auto;
+      margin-right: auto;
+      gap: 40px;
+    }
+
+    &__box {}
+
+    &__menu-title {
+      font-size: 20px;
+      line-height: 24px;
+    }
+
+    &__menu-list {}
+
+    &__menu-item:not(:last-child) {
+      margin-bottom: 8px;
+    }
+
+    &__menu-link {
+      font-size: 14px;
+    }
+
+    &__contacts-item {}
+
+    &__contacts-icon {
+      font-size: 15px;
+    }
+
+    &__contacts-address,
+    &__contacts-phone {
+      font-size: 14px;
+      line-height: 18px;
+    }
+
+  }
+}
