--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -71,7 +71,12 @@ body {
     position: relative;
   }
 
-  &__content:before {
+  &__content {
+    position: relative;
+    margin-right: 100px;
+  }
+
+  &__icon {
     color: $color__yellow;
     position: absolute;
     font-size: 69px;
@@ -83,8 +88,8 @@ body {
     font-family: $font__CormorantGaramond;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 140px;
-    line-height: 73px;
+    @include adaptiveValueREM('font-size', 140, 25, 1920, 320, 1);
+    @include adaptiveValueREM('line-height', 73, 30, 1920, 320, 1);
     letter-spacing: 0.4em;
     margin-bottom: 20px;
   }
@@ -92,15 +97,15 @@ body {
   &__accent {
     font-family: $font__CormorantGaramond;
     font-weight: 700;
-    font-size: 60px;
-    line-height: 73px;
+    @include adaptiveValueREM('font-size', 60, 25, 1920, 320, 1);
+    @include adaptiveValueREM('line-height', 73, 30, 1920, 320, 1);
     margin-bottom: 24px;
   }
 
   &__text {
     font-family: 'Mulish';
     font-weight: 400;
-    font-size: 24px;
+    @include adaptiveValueREM('font-size', 24, 18, 1920, 320, 1);
     line-height: 150%;
     margin-bottom: 40px;
   }
@@ -123,38 +128,47 @@ body {
     display: none;
   }
 
-  &__bg {
+  &__bg-wrapper {
     position: absolute;
-    width: 646px;
-    height: 657px;
     top: 0;
     right: 0;
+    width: 100%;
+    max-width: 646px;
+    min-height: 657px;
+  }
+
+  &__bg {
+    display: block;
+    position: relative;
+    width: 100%;
+    max-width: 646px;
+    min-height: 657px;
+  }
+
+  &__bg source,
+  &__bg img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
     z-index: -1;
   }
 }
 
 // home-page ====================================================================================================
-@media (max-width: 950px) {
+@media (max-width: 650px) {
   .home-page {
     &__wrapper {}
 
     &__content {
       min-height: 190px;
-      max-width: 180px;
     }
 
-    &__content:before {
+    &__icon {
       display: none;
-    }
-
-    &__titel {
-      font-size: 25px;
-      line-height: 30px;
-    }
-
-    &__accent {
-      font-size: 25px;
-      line-height: 30px;
     }
 
     &__text,
@@ -165,15 +179,15 @@ body {
     &__mobile {
       display: block;
       position: relative;
+    }
 
-      &:before {
-        color: $color__yellow;
-        position: absolute;
-        font-size: 34px;
-        left: 50%;
-        transform: translateX(-50%);
-        top: -57.5px;
-      }
+    &__mobile-icon {
+      color: $color__yellow;
+      position: absolute;
+      font-size: 34px;
+      left: 50%;
+      transform: translateX(-50%);
+      top: -57.5px;
     }
 
     &__text-mobile {
@@ -201,9 +215,15 @@ body {
       margin-top: 24px;
     }
 
+    &__bg-wrapper {
+      max-width: 134px;
+      min-height: 190px;
+    }
+
     &__bg {
-      width: 134px;
-      height: 190px;
+
+      max-width: 134px;
+      min-height: 190px;
     }
   }
 }
@@ -517,8 +537,13 @@ body {
     }
 
     &__imgs-wrapper {
-      flex-direction: column;
-      align-items: center;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      justify-items: center;
+      width: 100%;
+      max-width: 612px;
+      margin: 0 auto;
     }
 
     &__imgs-item {
@@ -569,6 +594,15 @@ body {
       font-size: 50px;
       line-height: 63px;
       top: -7px;
+    }
+  }
+}
+
+@media(max-width: 620px) {
+  .services {
+    &__imgs-wrapper {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr;
     }
   }
 }
@@ -1001,8 +1035,6 @@ body {
       margin: 0;
     }
 
-    &__link {}
-
     &__img {}
 
     &__content-wrapper {
@@ -1032,22 +1064,43 @@ body {
 
   }
 }
-.reviews-slider-wrapper {
-    position: relative;
+
+// slider =========================================================================================
+.reviews-slider {
+  padding-bottom: 120px;
+
+  &__containerSlider {
+    max-width: 77.5rem;
+    box-sizing: content-box;
+    margin: 0 auto;
+    padding: 0 1.5rem;
+  }
+
+  &__title-h3 {
+    margin-bottom: 24px;
+  }
+
+  &__title-h2 {
+    margin-bottom: 50px;
+  }
 }
+
+.reviews-slider-wrapper {
+  position: relative;
+}
+
 .swiper {
   max-width: 1156px;
   height: 431px;
   margin: 0 42px 0 42px;
-  margin-bottom: 120px;
   position: relative;
 
   &::before {
     content: '';
     position: absolute;
-    width: 277px;
+    width: 25%;
     height: 431px;
-    left: 0px;
+    left: -2px;
     top: 0px;
     background: linear-gradient(90deg, #F4F2F0 0.36%, rgba(244, 242, 240, 0.8) 45.38%, rgba(244, 242, 240, 0) 99.28%);
     z-index: 1;
@@ -1059,11 +1112,30 @@ body {
     position: absolute;
     width: 25%;
     height: 431px;
-    right: 0;
+    right: -2px;
     top: 0px;
     background: linear-gradient(90deg, rgba(242, 240, 237, 0) 0.36%, rgba(242, 240, 237, 0.8) 66.82%, #F2F0ED 99.28%);
     z-index: 1;
     pointer-events: none;
+  }
+}
+
+.swiper-slide {
+  width: 25%;
+  border-radius: 20px;
+  overflow: hidden;
+  cursor: pointer;
+  position: relative;
+
+  & img,
+  & source {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
   }
 }
 
@@ -1103,5 +1175,280 @@ body {
 
 .swiper-button-next {
   right: -20px;
-  transform: rotate(180deg);
+  transform: rotate(180deg)translateY(50%);
+}
+
+// slider =========================================================================================
+
+@media(max-width: 701px) {
+  .reviews-slider {
+    padding-bottom: 80px;
+
+    &__containerSlider {
+      padding: 0;
+    }
+
+    &__text {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__title-h3 {
+      margin-bottom: 17px;
+      text-align: center;
+    }
+
+    &__title-h2 {
+      margin-bottom: 40px;
+      text-align: center;
+    }
+  }
+
+  .reviews-slider-wrapper {
+    position: relative;
+  }
+
+  .swiper {
+    width: 100%;
+    max-width: 392px;
+    height: 187px;
+    margin: 0 auto;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 120px;
+      height: 187px;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 120px;
+      height: 187px;
+    }
+  }
+
+  .swiper-slide {
+    width: 33%;
+    // max-width: 120px;
+    height: 187px;
+    border-radius: 20px;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    display: none;
+  }
+
+}
+
+@media(max-width: 340px) {
+  .reviews-slider {
+    .swiper-slide {
+      width: 100%;
+      max-width: 120px;
+      height: 187px;
+      border-radius: 20px;
+    }
+  }
+}
+
+// spollers ========================================================================================================================================================
+.spollers {
+  padding-top: 120px;
+  padding-bottom: 132px;
+  position: relative;
+
+  &__decor-text {
+    position: absolute;
+    top: -71px;
+    left: 0;
+    font-weight: 900;
+    font-size: 150px;
+    line-height: 188px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #F0EDEA;
+  }
+
+  &__title-h2 {
+    margin-bottom: 60px;
+    text-align: center;
+  }
+
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 50px;
+  }
+
+  &__box {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 557px;
+  }
+
+  &__item {}
+
+  &__title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 557px;
+    border-bottom: solid 1px rgba(19, 19, 19, .1);
+    gap: 16px;
+    padding-bottom: 24px;
+  }
+
+  &__text {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 28px;
+    text-align: left;
+  }
+
+  &__icon {
+    transition: all .3s;
+    font-size: 18px;
+    color: #131313;
+  }
+
+  &__body {
+    padding: 24px 0 24px 0;
+  }
+}
+
+._spoller-active .spollers__icon {
+  transform: rotate(45deg);
+
+}
+
+// spollers ========================================================================================================================================================
+
+@media(max-width: 951px) {
+  .spollers {
+    padding-top: 80px;
+    padding-bottom: 83px;
+
+    &__decor-text {
+      font-size: 90px;
+      line-height: 113px;
+      top: -40px;
+    }
+
+
+    &__title-h2 {
+      margin-bottom: 40px;
+    }
+
+    &__wrapper {
+      flex-direction: column;
+      align-items: center;
+      gap: 0;
+    }
+
+    &__box {}
+
+    &__item {}
+
+    &__title {}
+
+    &__text {
+      font-size: 16px;
+      line-height: 20px;
+    }
+
+    &__icon {}
+
+    &__body {}
+  }
+}
+
+// read-more ========================================================================================================================================================
+
+.read-more {
+  padding-bottom: 126px;
+
+  &__title-h2 {
+    font-family: $font__CormorantGaramond;
+    margin-bottom: 24px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 44px;
+    text-transform: uppercase;
+  }
+
+  &__wrapper {}
+
+  &__text {
+    position: relative;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #828282;
+    margin-bottom: 24px;
+    height: 110px;
+    overflow: hidden;
+    transition: all .3s;
+
+    &:before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 110px;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%);
+      left: 0;
+      bottom: 0;
+      pointer-events: none;
+      opacity: 1;
+      visibility: visible;
+
+    }
+
+  }
+
+  &__text-full {
+    height: 100%;
+
+    &:before {
+      bottom: -120px;
+      opacity: 0;
+      visibility: hidden;
+    }
+  }
+
+  &__btn {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    border-bottom: solid 1px #131313;
+    padding-bottom: 5px;
+  }
+}
+
+// read-more ========================================================================================================================================================
+
+@media(max-width: 951px) {
+  .read-more {
+    padding-bottom: 80px;
+
+    &__title-h2 {
+      font-size: 26px;
+      margin-bottom: 20px;
+    }
+
+    &__wrapper {}
+
+    &__text {
+      font-size: 15px;
+      margin-bottom: 20px;
+    }
+  }
 }
