--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1668,7 +1668,7 @@ body {
   transform: rotate(45deg);
 }
 
-@media (max-width: 951px) {
+@media (max-width: 950px) {
   .spollers {
     padding-top: 80px;
     padding-bottom: 83px;
@@ -1684,7 +1684,10 @@ body {
   .spollers__wrapper {
     flex-direction: column;
     align-items: center;
-    gap: 0;
+    gap: 16px;
+  }
+  .spollers__box {
+    gap: 16px;
   }
   .spollers__text {
     font-size: 16px;
@@ -1709,9 +1712,9 @@ body {
   line-height: 24px;
   color: #828282;
   margin-bottom: 24px;
-  height: 110px;
+  transition: all 0.6s;
   overflow: hidden;
-  transition: all 0.3s;
+  max-height: 110px;
 }
 .read-more__text:before {
   content: "";
@@ -1724,17 +1727,15 @@ body {
   pointer-events: none;
   opacity: 1;
   visibility: visible;
-  transition: all 0.3s;
+  transition: all 0.6s;
 }
 .read-more__text-full {
-  height: auto;
-  transition: all 0.3s;
+  max-height: 700px;
 }
 .read-more__text-full:before {
   bottom: -120px;
   opacity: 0;
   visibility: hidden;
-  transition: all 0.3s;
 }
 .read-more__btn {
   font-weight: 600;
@@ -2153,11 +2154,15 @@ body::after {
   visibility: visible;
 }
 
+.popup__content {
+  border: 8px solid rgba(19, 19, 19, 0.1);
+}
 .popup__close {
   position: relative;
   width: 20px;
   height: 20px;
   margin-left: auto;
+  cursor: pointer;
 }
 .popup__close:before, .popup__close:after {
   content: "";
@@ -2310,5 +2315,468 @@ body::after {
 @media (max-width: 500px) {
   .popup__form-block {
     flex-direction: column;
+  }
+}
+.services-home-page {
+  padding-top: 80px;
+  padding-bottom: 76px;
+  position: relative;
+}
+.services-home-page__wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.services-home-page__box {
+  flex: 0 1 520px;
+}
+.services-home-page__title-h3 {
+  margin-bottom: 24px;
+}
+.services-home-page__title-h2 {
+  margin-bottom: 60px;
+}
+.services-home-page__text-wrapper {
+  max-width: 520px;
+  margin-bottom: 93px;
+}
+.services-home-page__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #4F4F4F;
+}
+.services-home-page__popup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  width: 288px;
+  height: 54px;
+  background: linear-gradient(0deg, #FFD700, #FFD700), #ED7C30;
+  border-radius: 50px;
+  padding: 10px;
+}
+.services-home-page__img-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  padding-left: 700px;
+}
+.services-home-page__img {
+  display: block;
+  min-height: 660px;
+  width: 100%;
+  max-width: 880px;
+  position: relative;
+  margin-left: auto;
+}
+.services-home-page__img source, .services-home-page__img img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media (max-width: 1100px) {
+  .services-home-page {
+    padding-bottom: 60px;
+    padding-top: 0;
+  }
+  .services-home-page__wrapper {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 520px;
+  }
+  .services-home-page__img-wrapper {
+    position: static;
+    width: 100%;
+    padding: 0 24px 0 24px;
+    margin-bottom: 60px;
+  }
+  .services-home-page__img {
+    display: block;
+    min-height: 440px;
+    width: 100%;
+    max-width: 100%;
+    position: relative;
+    margin: 0 auto;
+  }
+  .services-home-page__img source, .services-home-page__img img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center center;
+       object-position: center center;
+  }
+}
+@media (max-width: 650px) {
+  .services-home-page {
+    padding-bottom: 60px;
+    padding-top: 0;
+  }
+  .services-home-page__wrapper {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 520px;
+  }
+  .services-home-page__title-h3 {
+    margin-bottom: 17px;
+  }
+  .services-home-page__title-h2 {
+    margin-bottom: 40px;
+  }
+  .services-home-page__text-wrapper {
+    margin-bottom: 24px;
+  }
+  .services-home-page__img {
+    min-height: 240px;
+    max-width: 643px;
+  }
+  .services-home-page__img source, .services-home-page__img img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center center;
+       object-position: center center;
+  }
+}
+.services-price {
+  position: relative;
+  background: #F0EDEA;
+  padding-top: 178px;
+  padding-bottom: 120px;
+}
+.services-price__decor {
+  font-weight: 900;
+  font-size: 150px;
+  line-height: 188px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  position: absolute;
+  top: -70px;
+  left: 0;
+}
+.services-price__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 40px;
+  margin-bottom: 40px;
+}
+.services-price__box {
+  min-height: 850px;
+  width: 100%;
+  max-width: 600px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background: #fff;
+  padding: 40px 16px 40px 16px;
+  gap: 24px;
+}
+.services-price__list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-width: 500px;
+}
+.services-price__title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 29px;
+  position: relative;
+  display: inline-block;
+  margin-bottom: 25px;
+  z-index: 1;
+}
+.services-price__title::before {
+  content: "";
+  position: absolute;
+  background: linear-gradient(0deg, #FFD700, #FFD700), #ED7C30;
+  opacity: 0.4;
+  height: 8px;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+}
+.services-price__item {
+  border-bottom: solid 1px rgba(19, 19, 19, 0.1);
+  padding-bottom: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 15px;
+}
+.services-price__item:not(:last-child) {
+  margin-bottom: 16px;
+}
+.services-price__text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  flex: 0 1 408px;
+}
+.services-price__price {
+  flex: 0 0 50px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 24px;
+}
+.services-price__btn {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: solid 1px #FFD700;
+  width: 288px;
+  height: 54px;
+  border-radius: 50px;
+  margin: 0 auto;
+}
+
+@media (max-width: 850px) {
+  .services-price {
+    padding-top: 60px;
+    padding-bottom: 80px;
+  }
+  .services-price__decor {
+    font-size: 50px;
+    line-height: 63px;
+    top: -19px;
+  }
+  .services-price__wrapper {
+    justify-content: center;
+  }
+  .services-price__box {
+    max-width: 100%;
+  }
+  .services-price__box:nth-child(2) {
+    display: none;
+  }
+  .services-price__list {
+    max-width: 100%;
+  }
+  .services-price__text {
+    font-size: 15px;
+    line-height: 24px;
+  }
+  .services-price__price {
+    font-size: 18px;
+  }
+}
+.services-types {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  position: relative;
+}
+.services-types__decor-text {
+  font-weight: 900;
+  font-size: 150px;
+  line-height: 188px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #F0EDEA;
+  position: absolute;
+  top: -55px;
+  right: 0;
+}
+.services-types__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 80px;
+}
+.services-types__box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 40px;
+}
+.services-types__box:nth-child(2n+2) {
+  flex-direction: row-reverse;
+}
+.services-types__img {
+  position: relative;
+  width: 100%;
+  flex: 0 1 540px;
+  min-height: 543px;
+  height: 100%;
+}
+.services-types__img source, .services-types__img img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+}
+.services-types___content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 0 1 580px;
+}
+.services-types__title-h3 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 25px;
+  position: relative;
+  display: inline-block;
+  margin-bottom: 24px;
+  z-index: 1;
+}
+.services-types__title-h3:before {
+  content: "";
+  position: absolute;
+  background: linear-gradient(0deg, #FFD700, #FFD700), #ED7C30;
+  opacity: 0.4;
+  height: 8px;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+}
+.services-types__title-h2 {
+  font-family: "CormorantGaramond", sans-serif;
+  font-weight: 700;
+  font-size: 46px;
+  line-height: 56px;
+  text-transform: uppercase;
+  margin-bottom: 60px;
+}
+.services-types__text-wrapper {
+  max-width: 580px;
+  margin-bottom: 60px;
+}
+.services-types__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #4F4F4F;
+}
+
+@media (max-width: 1120px) {
+  .services-types__title-h2 {
+    font-size: 36px;
+  }
+}
+@media (max-width: 850px) {
+  .services-types {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+  .services-types__decor-text {
+    font-size: 50px;
+    line-height: 63px;
+    top: -17px;
+  }
+  .services-types__wrapper {
+    gap: 60px;
+    flex-direction: column;
+  }
+  .services-types__box {
+    flex-direction: column;
+  }
+  .services-types__box:nth-child(2n+2) {
+    flex-direction: column;
+  }
+  .services-types__img {
+    max-width: 580px;
+  }
+  .services-types__title-h3 {
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 17px;
+  }
+  .services-types__title-h2 {
+    font-size: 24px;
+    line-height: 29px;
+    margin-bottom: 24px;
+  }
+  .services-types__text-wrapper {
+    margin-bottom: 24px;
+  }
+}
+@media (max-width: 550px) {
+  .services-types__img {
+    min-height: 0;
+    max-height: 274px;
+  }
+}
+.services-advantages {
+  padding-bottom: 160px;
+}
+
+.services-saloon {
+  padding-bottom: 120px;
+}
+
+.services-spollers {
+  position: relative;
+  padding-top: 120px;
+  padding-bottom: 200px;
+}
+.services-spollers .spollers__decor-text {
+  right: 0;
+  left: auto;
+  color: #fff;
+}
+
+.services-spollers-mobile {
+  display: none;
+  position: relative;
+}
+
+.services-form .popup__content {
+  visibility: visible;
+  transform: scale(1);
+}
+.services-form .popup__text {
+  margin-top: 49px;
+}
+
+@media (max-width: 950px) {
+  .services-advantages {
+    padding-bottom: 80px;
+  }
+  .services-saloon {
+    padding-bottom: 80px;
+  }
+  .services-spollers {
+    display: none;
+  }
+  .services-spollers-mobile {
+    display: block;
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+  .services-form {
+    display: none;
   }
 }
