--- a/resources/scss/popup.scss
+++ b/resources/scss/popup.scss
@@ -72,13 +72,16 @@ body::after {
 .popup {
   &__wrapper {}
 
-  &__content {}
+  &__content {
+    border: 8px solid rgba(19, 19, 19, 0.1);
+  }
 
   &__close {
     position: relative;
     width: 20px;
     height: 20px;
     margin-left: auto;
+    cursor: pointer;
 
     &:before,
     &:after {
